<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/textLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/teamImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/teamImage" />

        <TextView
            android:id="@+id/roundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/riundNumberText"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/currentTeamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/teamNumberText"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/remainingWordsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/remainingWordsText"
            android:textSize="30sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLinearLayout"
        android:text="@string/startButtonText"
        android:backgroundTint="@color/black"
        android:layout_marginTop="400dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>