<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/wordsCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmExitText"
        android:textSize="20sp"
        android:layout_margin="15dp"
        />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

    <Button
        android:id="@+id/confirmExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/yes"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/rejectExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/no"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        />

   </LinearLayout>

</LinearLayout>