<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/boomPic"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/boom2"
        android:scaleType="centerCrop"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boomPic"
        android:orientation="vertical">

        <Button
            android:id="@+id/startButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/startText"
            android:backgroundTint="@color/black"
            />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:text="@string/settingText"
            android:backgroundTint="@color/black"
            />

        <Button
            android:id="@+id/ruleButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:text="@string/ruleText"
            android:backgroundTint="@color/black"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>