<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/teamSettingsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamsSettings"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/teamRecycler"
            android:layout_width="300dp"
            android:layout_height="400dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addTeamButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="@string/addTeam"/>

            <Button
                android:id="@+id/removeTeamButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="@string/removeTeam"/>

        </LinearLayout>

    </LinearLayout>



        <TextView
            android:id="@+id/countOfWordsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/countOfWords"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/teamSettingsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/countOfWordsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/countOfWordsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/WordsButton15"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:text="15"/>

            <Button
                android:id="@+id/WordsButton30"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:layout_marginStart="15dp"
                android:text="30"/>

            <Button
                android:id="@+id/WordsButton45"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:layout_marginStart="15dp"
                android:text="45"/>

        </LinearLayout>







        <TextView
            android:id="@+id/timeChooseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/roundTimeText"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/countOfWordsButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/timeButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/timeChooseText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/timeButton30"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:text="30"/>

            <Button
                android:id="@+id/timeButton45"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:layout_marginStart="15dp"
                android:text="45"/>

            <Button
                android:id="@+id/timeButton60"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:layout_marginStart="15dp"
                android:text="60"/>

        </LinearLayout>






    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/forthRoundSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:trackTintMode="@color/gold"
        app:thumbTintMode="@color/gold"
        app:layout_constraintTop_toBottomOf="@id/timeButtons"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:text="@string/addForthRound"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/hardcoreRoundSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forthRoundSwitch"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:text="@string/hardcoreModeOn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>